# HyperBEAM

./: .gitmodules  config.flat  rebar.config
native/dev_wasinn/: CLAUDE.md  Makefile  PLAN.md  build.sh  clean.sh
native/dev_wasinn/inferencer/: Cargo.toml
native/dev_wasinn/inferencer/src/: lib.rs  main.rs
native/dev_wasinn/module/: Cargo.toml  Makefile  build.sh
native/dev_wasinn/module/frontend/: app.js  image_app.js  index.html  styles.css
native/dev_wasinn/module/image-inferencer/: Cargo.toml
native/dev_wasinn/module/image-inferencer/src/: lib.rs
native/dev_wasinn/module/image_inferencer/: Cargo.toml
native/dev_wasinn/module/image_inferencer/src/: main.rs
native/dev_wasinn/module/image_server/: Cargo.toml
native/dev_wasinn/module/image_server/src/: main.rs  runtime.rs
native/dev_wasinn/module/inferencer/: .gitignore  Cargo.toml
native/dev_wasinn/module/inferencer/src/: bindings.rs  components.rs  lib.rs  utils.rs
native/dev_wasinn/module/inferencer/wit/: inferencer.wit  ncl-ml.wit
native/dev_wasinn/module/nif/: Cargo.toml
native/dev_wasinn/module/nif/src/: lib.rs
native/dev_wasinn/module/server/: Cargo.toml  index.py  model.onnx
native/dev_wasinn/module/server/src/: http_main.rs  image_runtime.rs  lib.rs  main.rs  ncl_ml.rs  registry.rs  runtime.rs  tensor.rs  tokenizer.rs  utils.rs
native/dev_wasinn/module/test/: test.sh
native/dev_wasinn/nif/: Cargo.toml
native/dev_wasinn/nif/src/: lib.rs
native/dev_wasinn/server/: Cargo.toml
native/dev_wasinn/server/src/: lib.rs  main.rs  runtime.rs  tensor.rs
src/: dev_wasinn.erl  dev_wasinn_nif.erl
