[package]
name = "server"
version = "0.0.1"
authors = ["Saam Tehrani"]
edition = "2021" 

[lib]
name = "server"
path = "src/lib.rs"

[[bin]]
name = "server"
path = "src/main.rs"

[dependencies]
tokio = { version = "1.45.0", features = ["io-util", "macros", "rt", "rt-multi-thread", "sync", "time", "full"] }
hyper = { version = "1.6", features = ["full"] }
hyper-util = { version = "0.1.11", features = ["full"] }
http-body-util = { version = "0.1.3", features = ["full"] }
bytes = "1.10.1"
image = { version = "0.25.6", features = ["jpeg"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
wasmtime = "32.0.0"
anyhow = "1.0.98"
wasmtime-wasi = "32.0.0"
wasmtime-wasi-nn = "32.0.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
futures = "0.3"
tokio-stream = { version = "0.1", features = ["sync"] }
opencv = "0.94.4"
